--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <style>
+          .bg
+          {
+            position:absolute;
+            top: 10px;
+            left: 10px;
+            z-index: -1;
+            width: 600px;
+            height: 600px;
+          }
+          .map
+          {
+            position:absolute;
+            top: 10px;
+            left: 10px;
+          }
+          .europeMap
+          {
+            height: 600px;
+            width: 600px;
+
+          }
+          </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My webpage!</title>
+      <img class="bg" height="483" width="483" src="./assets/PIXNIO-202980-725x483.jpeg" />
+      <object id="mainMap" type="image/svg+xml" data="assets/Diplomacy.svg" class="europeMap">
+        Kiwi Logo <!-- fallback image in CSS -->
+      </object>
   </head>
   <body>
   </body>
