Add starting colours

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
             top: 10px;
             left: 10px;
             z-index: -1;
-            width: 600px;
-            height: 600px;
+            width: 800px;
+            height: 800px;
           }
           .map
           {
@@ -19,15 +19,15 @@
           }
           .europeMap
           {
-            height: 600px;
-            width: 600px;
+            height: 800px;
+            width: 800px;
 
           }
           </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My webpage!</title>
-      <img class="bg" height="483" width="483" src="./assets/PIXNIO-202980-725x483.jpeg" />
+      <img class="bg" height="800" width="800" src="./assets/paperTexture.jpg" />
       <object id="mainMap" type="image/svg+xml" data="assets/Diplomacy.svg" class="europeMap">
         Kiwi Logo <!-- fallback image in CSS -->
       </object>
