--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,11 +7,12 @@
     <title>My webpage!</title>
   </head>
   <body>
-    <div class="map">
+    <!-- <div class="map">
       <img class="bg" src="./assets/paperTexture.jpg" />
       <object id="mainMap" type="image/svg+xml" data="assets/Diplomacy.svg" class="europeMap">
         Kiwi Logo <a!-- fallback image in CSS -a->
       </object>
-    </div>
+    </div> -->
+    <div id="root" ></div>
   </body>
 </html>
