--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="assets/css/game.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
     <title>My webpage!</title>
   </head>
   <body>
