--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="assets/css/game.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <meta charset="utf-8">
+    <link rel="stylesheet" href="assets/css/game.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <meta charset="utf-8" />
     <!-- <meta name="viewport"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My webpage!</title>
   </head>
   <body>
-    <div id="root" ></div>
+    <div id="root"></div>
   </body>
 </html>
